--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -199,7 +199,7 @@ Only those waters that are under the State of Oregon’s jurisdiction are evalua
 
 ## Data Sources
 
-Water quality data were retrieved from DEQ's [Ambient Water Quality Monitoring System (AWQMS)][3.1.1] which integrates DEQ water quality data with other publically available data sources (including the now retired DEQ LASAR database); the [Water Quality Portal][3.1.2]) which includes data from the U.S. Environmental Protection Agency ([WQX/Storet][3.1.3]) database, USGS's [NWIS][3.1.4], and other federal agencies, Tribes, and various third parties; NOAA’s [National Estuarine Research Reserve System][3.1.5]; [EIM][3.1.6] (Washington Department of Ecology database); and data obtained during DEQ’s Integrated Report “call for data” process. 
+Water quality data were retrieved from DEQ's [Ambient Water Quality Monitoring System (AWQMS)][3.1.1] that integrates DEQ water quality data with other publically available data sources (including the now retired DEQ LASAR database); the [Water Quality Portal][3.1.2]) that includes data from the U.S. Environmental Protection Agency ([WQX/STORET][3.1.3]) database, USGS's [NWIS][3.1.4], and other federal agencies, Tribes, and various third parties; NOAA’s [National Estuarine Research Reserve System][3.1.5]; [EIM][3.1.6] (Washington Department of Ecology database); and data obtained during DEQ’s Integrated Report “call for data” process. 
 
 Information about watershed improvement projects and the associated on the ground treatments that were implemented were obtained from the [Oregon Watershed Restoration Inventory][3.1.7] (OWRI) database maintained by the Oregon Watershed Enhancement Board (OWEB).
 
@@ -330,10 +330,13 @@ knitr::kable(bacteria.indicators.tbl,
 
 ```
 
-INSERT GEOMETRIC MEAN EQUATION
+$$GM90 = \sqrt[n]{x_{1}x_{2}...x_{n}}$$
+Where:
+$GM90$ = The geometric mean over a 90 day period.
+$n$ = number of samples.
+$x_n$ = bacteria sample concentration, as number of organisms per 100 mL.
 
-A geometric mean is calculated on a rolling basis for each 90-day period of data available at a sampling location. A minimum of five samples collected on different days is required to calculate a 90-day rolling geometric mean.
-The 90-day geometric mean (GM90) of bacteria concentration is calculated by taking the nth root of the product of the concentration of each sample collected within a 90-day period for which n ≥ 5.
+A geometric mean is calculated on a rolling basis for each 90-day period of data available at a sampling location. A minimum of five samples collected on different days is required to calculate a 90-day rolling geometric mean. The 90-day geometric mean ($GM90$) of bacteria concentration is calculated by taking the nth root of the product of the concentration of each sample collected within a 90-day period for which $n$ ≥ 5.
 
 The median sample concentration is calculated for the entire analysis period once there are at least five samples available.
 
@@ -401,7 +404,21 @@ The application of the various dissolved oxygen criteria is based on designated 
 
 If the dissolved oxygen concentration exceeded the water quality criterion, but met the criteria for percent saturation at the same time, it was considered to be in compliance with the water quality criterion. Direct field instrument measurements of percent saturation are preferred and shall be used if available. However, if corresponding percent saturation data is unavailable, and corresponding water temperature data is available, the value can be calculated using below equations. When the dissolved oxygen saturation is measured in excess of 100 percent, the saturation value used shall be limited to 100 percent for the calculation of metrics. 
 
-INSERT EQUATION
+#### Equation 1:
+$$DO_{Theo} = e ^{[-139.34411+\frac{1.575701\times 10^5}{T}-\frac{6.642308\times 10^7}{T^2}+\frac{1.23800\times 10^{10}}{T^3}-\frac{8.621949\times 10^{11}}{T^4}]} \times (1-(0.0001148 \times Site_{elvm}))$$
+Where
+$e$ = a constant, the base of the natural logarithm ($\approx 2.71828$)
+$T$ = Temperatuer in Kelvin
+$Site_{elvm} $ = Site elevation in meters (recorded field value or derived from a Digital Elevation Model)
+
+#### Equation 2:
+
+$$ PS = 100\times \frac{DO_{Meas}}{DO_{Theo}} $$
+Where
+$PS$ = Percent saturation dissolved oxygen
+$DO_{Meas}$ = Measured Dissolved Oxygen in mg/L
+$DO_{Theo}$ = Theoretical Dissolved Oxygen in mg/L
+
 
 ### pH
 
@@ -506,7 +523,11 @@ The applicable temperature criteria in `r tbls(name="tbl.temp.criteria", display
 
 The seven-day average daily maximum stream temperature is an average of the daily maximum water temperatures for seven consecutive days. The average daily maximum temperature value for each seven-day period is assigned to the last (7th) calendar day of each period. The 7DADM is repeated for each consecutive 7-day period on a moving or rolling basis. For example, the 7DADM for August 10 is calculated from Tmax for August 4 to August 10; the 7DADM for August 11 is calculated from August 5 to 11, etc.
 
-INSERT 7DADM EQUATION
+$$7DADM = \frac{1}{7}\sum_{i=1}^7T_{max-i} $$
+Where
+$7DADM$ = the serven-day average daily maximum stream temperature
+$i$ = day in the sequence
+$T_{max}$ = maximum temperature of day $i$
 
 When spawning criteria apply, the first 7-day averaging period begins on the date the spawning period begins. The first 7DADM value will be assigned to the 7th calendar day following the start date of the spawning period. Therefore, the 7th calendar day of the spawning period is the first day that the 7DADM is required to meet the spawning criteria.
 
