--- a/state_subbasin_summary.Rmd
+++ b/state_subbasin_summary.Rmd
@@ -34,10 +34,6 @@ knitr::opts_chunk$set(echo = FALSE,
 
 options(kableExtra.auto_format = F)
 
-# for(k in 1:capnum){
-#   tbls(name = paste0("p", k), display = FALSE)
-# }
-
 ```
 
 
@@ -50,12 +46,11 @@ cat("##### Parameter Maps\n\n")
 
 for(j in unique(map_df$Pollutant)){
   
-  # wql_streams_i <- filter(wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name == i)
-  # wql_streams_i <- wql_streams_i[lapply(wql_streams_i$`_ogr_geometry_`, length) != 0,]
-  
   cat(paste(j, "map"))
   cat("\n\n")
-  sub_map_df <- map_df %>% filter(Pollutant == j) %>% mutate(color = if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
+  sub_map_df <- map_df %>% 
+    filter(Pollutant == j) %>% 
+    mutate(color = if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
                                                                                 "lightgray",
                                                                                 if_else(!!status_current == "Not Attaining",
                                                                                         "orange",
@@ -69,28 +64,10 @@ for(j in unique(map_df$Pollutant)){
                 options = WMSTileOptions(format = "image/png",
                                          transparent = TRUE),
                 layers = "0") %>%
-    # addPolylines(data = wql_streams_i,
-    #                opacity = 1,
-    #                weight = 2,
-    #                color = "red",
-    #                # popup = ~paste0("<b>", STREAM_NAM,
-    #                #                 "<br>Parameter:</b> ", Char_Name,
-    #                #                 "<br><b>Listing:</b> ", LISTING_ST),
-    #                # popup = ~paste0("<b>", STREAM_NAM,
-    #                #                 # "<br>Parameter:</b> ", Char_Name,
-    #                #                 "<br></b><br>",
-    #                #                 sapply(SEGMENT_ID, WQLpopupTable, param = i, USE.NAMES = FALSE)),
-    #                # popupOptions = popupOptions(maxWidth = 1200),
-    #                # highlightOptions = highlightOptions(color = "red", weight = 8, opacity = 1),
-    #                # label = ~STREAM_NAM,
-    #                smoothFactor = 2,
-    #                group = "WQ Listed Streams"
-    #   ) %>% 
     addPolygons(data = sub_area, fill = FALSE, group = "subbasin", opacity = 1, weight = 3, color = "black", label = paste(basin, "subbasin")) %>%
     addCircleMarkers(lng = ~Long_DD, lat = ~Lat_DD, fillColor = ~color, stroke = TRUE, weight = 1, 
                      opacity = 1, fillOpacity = 1, color = 'black', radius = 4.5, label = ~color)
   
- # maps[[i]] <- map
   mapview::mapshot(map, file = paste0(project_dir, "Maps/", subbasin_name, "_", gsub(",| ", "_", j), ".png"), remove_controls = c("zoomControl", "layersControl"))
   
   cat(paste0("![](", project_dir, "Maps/", subbasin_name, "_", gsub(",| ", "_", j), ".png)"), "\n")
@@ -124,11 +101,6 @@ wql_sub <- wql_sub[grep("Cat 5|Cat 4A", wql_sub$`Listing Status`, ignore.case = 
 wql_sub$`Listing Status` <- gsub("Cat 4A: Water quality limited, TMDL approved", "Cat 4A", wql_sub$`Listing Status`)
 wql_sub[grep("Cat 5", wql_sub$`Listing Status`, ignore.case = TRUE), "Listing Status"] <- "Cat 5"
 
-# cat(tbls(name = paste0(subbasin_name, "_wql"), 
-#            caption = paste0("Summary of Integrated Report listings for parameters included in the ", subbasin_name,
-#                             " Subbasin. Table based on the approved (and partially disapproved) 2012 Integrated Report Listings by the EPA.")
-# ))
-
 wql_sub <- wql_sub %>% group_by(Pollutant) %>% summarise('Segments Impaired' = n())
 
 knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE,
@@ -138,10 +110,6 @@ knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names 
                                              " Subbasin for the parameters assessed in this report. Impairments are summarized from the final 2012 303(d) integrated report."))) %>% 
   table_style()
 
-# knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names = FALSE
-#              # ,
-#              # caption = tbls(name = paste0(subbasin_name, "_wql_streams"), caption = paste0("Category 4A or Category 5 stream segments within the ", subbasin_name, " Subbasin."))
-#              ) %>% table_style()
 } else {cat("There are no water quality impaired Category 4A or Category 5 stream segments in this subbasin.")}
 
 ```
@@ -162,8 +130,6 @@ au_sum <- par_sum_au %>% group_by(Char_Name) %>%
   mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
   rename(Pollutant = Char_Name)
 
-# cat(tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin.")))
-
 knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
              caption = tbls(name = paste0(subbasin_name, "_au_sum"), caption = paste0("Summary of assessment unit status within the ", subbasin_name, " Subbasin."))
@@ -173,8 +139,6 @@ cat("\n\n")
 
 ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
   geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  # geom_bar(aes(x = Char_Name, y = n_not_attaining, fill = "Not Attaining"), stat = "identity", position = "dodge")+
-  # geom_bar(aes(x = Char_Name, y = n_unassessed, fill = "Unassessed"), stat = "identity", position = "dodge")+
   xlab("Pollutant")+
   ylab("# of Assessment Units")+
   scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
@@ -182,11 +146,6 @@ ggplot(reshape2::melt(au_sum, id.vars = "Pollutant", variable.name = "Status"))+
   ggtitle("Assessment Unit Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[1]] <- figs(name = paste0(subbasin_name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", subbasin_name, " Subbasin by parameter."))
-
-# cat("\n")
-# 
-# cat(figs(name = paste0(subbasin_name, "_au_sum_plot"), caption = paste0("Summary plot of assessment unit status within the ", subbasin_name, " Subbasin by parameter.")))
-# fignum <- fignum + 1
 
 cat(paste0("\n\nOregon DEQ groups assessment units into four types; streams, lakes, watershed units, or estuaries and bays. ", tbls(name = paste0(subbasin_name, "_au_type_sum"), display="cite"), " summarizes of the number of attaining, not attaining, and unassessed assessment units by parameter and assessment unit type.\n\n"))
 
@@ -196,8 +155,6 @@ au_sum_type <- par_sum_au %>% group_by(AU_Type, Char_Name) %>%
             Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
   mutate(Char_Name = sapply(Char_Name, simpleCap, USE.NAMES = FALSE)) %>% 
   rename("AU Type" = AU_Type, Pollutant = Char_Name)
-
-# cat(tbls(name = paste0(subbasin_name, "_au_type_sum"), caption = paste0(subbasin_name, " Subbasin status summary of assessment units by type.")))
 
 knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
@@ -215,8 +172,6 @@ stn_sum <- par_sum %>% group_by(Pollutant) %>%
             Unassessed = sum(status_2015_2018 == "Unassessed")) %>% 
   mutate(Pollutant = sapply(Pollutant, simpleCap, USE.NAMES = FALSE))
 
-# cat(tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin.")))
-
 knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table_format
              ,
              caption = tbls(name = paste0(subbasin_name, "_stn_sum"), caption = paste0("Summary of the status of stations within the ", subbasin_name, " Subbasin."))
@@ -226,8 +181,6 @@ cat("\n\n")
 
 ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))+
   geom_bar(aes(x = Pollutant, y = value, fill = Status), stat = "identity", position = "dodge")+
-  # geom_bar(aes(x = Char_Name, y = n_not_attaining, fill = "Not Attaining"), stat = "identity", position = "dodge")+
-  # geom_bar(aes(x = Char_Name, y = n_unassessed, fill = "Unassessed"), stat = "identity", position = "dodge")+
   xlab("Pollutant")+
   ylab("# of Stations")+
   scale_fill_manual(values = c("Attaining" = "forestgreen", "Not Attaining" = "orange", "Unassessed" = "gray"))+
@@ -235,11 +188,6 @@ ggplot(reshape2::melt(stn_sum, id.vars = "Pollutant", variable.name = "Status"))
   ggtitle("Station Attainment Count", subtitle = "Summarized by Pollutant")
 
 cap_list[[2]] <- figs(name = paste0(subbasin_name, "_stn_sum_plot"), caption = paste0("Summary plot of station status within the ", subbasin_name, " Subbasin by parameter."))
-
-# cat("\n")
-# 
-# cat(figs(name = paste0(subbasin_name, "_stn_sum_plot"), caption = paste0("Summary plot of station status within the ", subbasin_name, " Subbasin by parameter.")))
-# fignum <- fignum + 1
 
 ```
 
@@ -264,29 +212,3 @@ knitr::kable(stn_sum, padding = 0, digits = 1, row.names = FALSE, format = table
 cat("\n\n")
 ```
 
-
-```{r OWRI, include=FALSE, eval=FALSE, results = 'asis'}
-cat("##### OWRI Watershed Restoration Actions")
-cat("\n\n")
-
-  cat(paste(tbls(paste0(subbasin_name, "_owriTab"), display = "cite"), 
-            "summarizes reported treatment outputs reported to the Oregon Watershed Restoration Inventory (owri) for numerous watershed restoration projects within the ", subbasin_name, " Subbasin. Treatment summaries are grouped into yearly periods. The year refers to the year the project was completed."))
-  cat("\n\n")
-  
-  colnames(owri_huc8) <- sapply(gsub("_", " ", colnames(owri_huc8)), simpleCap, USE.NAMES = FALSE)
-  
-  cat(tbls(name = paste0(subbasin_name, "_owriTab"), 
-             caption = paste("Summary of watershed restoration actions implemented and reported to the Oregon Watershed Restoration Inventory in the ",
-                             subbasin_name, " Subbasin. Source: OWEB OWRI ", owri_version)
-                              )
-  )
-  capnum <- tbls(paste0(subbasin_name, "_owriTab"), display = "num")
-
-  t <- knitr::kable(owri_huc8, format = table_format, padding = 0, digits = 1, row.names = FALSE
-                    ) %>% table_style()
-  
-  print(t)
-  
-  cat("\n\n")
-
-```
