--- a/state_summary.Rmd
+++ b/state_summary.Rmd
@@ -81,31 +81,24 @@ tbls  <- captioner(prefix="Table")
 eqns <- captioner(prefix="Equation")
 
 load(file = paste0(state_project_dir, "Oregon_param_summary_by_station.RData"))
-load(file = paste0(state_project_dir, "Oregon_param_summary_by_au.RData"))
-state_param_sum <- state_param_sum_stn_data
-state_param_sum_au <- state_param_sum_au_data
-rm(state_param_sum_stn_data)
-rm(state_param_sum_au_data)
-# state_param_sum <- readxl::read_xlsx(path = paste0(state_project_dir, "Oregon_parameter_summary.xlsx"), 
-#                                sheet = "station_summary")
-# state_param_sum_au <- readxl::read_xlsx(path = paste0(state_project_dir, "Oregon_parameter_summary.xlsx"), 
-#                                   sheet = "AU_summary")
-state_param_sum <- state_param_sum %>% dplyr::filter(!is.na(AU_ID))
-state_param_sum <- state_param_sum %>% dplyr::filter(AU_ID != "")
-state_param_sum$Char_Name <- AWQMS_to_standard(state_param_sum$Char_Name)
+load(file = paste0(state_project_dir, "Oregon_param_summary_by_AU.RData"))
+
+state_param_sum_stn <- state_param_sum_stn %>% dplyr::filter(!is.na(AU_ID))
+state_param_sum_stn <- state_param_sum_stn %>% dplyr::filter(AU_ID != "")
+state_param_sum_stn$Char_Name <- AWQMS_to_standard(state_param_sum_stn$Char_Name)
 state_param_sum_au <- state_param_sum_au %>% dplyr::filter(!is.na(AU_ID))
 state_param_sum_au <- state_param_sum_au %>% dplyr::filter(AU_ID != "")
 state_param_sum_au$Char_Name <- AWQMS_to_standard(state_param_sum_au$Char_Name)
 
-state_param_sum$AU_Type <- if_else(grepl("_SR_", state_param_sum$AU_ID),
+state_param_sum_stn$AU_Type <- if_else(grepl("_SR_", state_param_sum_stn$AU_ID),
                              "Stream",
-                             if_else(grepl("_LK_", state_param_sum$AU_ID),
+                             if_else(grepl("_LK_", state_param_sum_stn$AU_ID),
                                      "Lake",
-                                     if_else(grepl("_WS_", state_param_sum$AU_ID),
+                                     if_else(grepl("_WS_", state_param_sum_stn$AU_ID),
                                              "Watershed Unit",
-                                             if_else(grepl("_EB_", state_param_sum$AU_ID),
+                                             if_else(grepl("_EB_", state_param_sum_stn$AU_ID),
                                                       "Estuary or Bay",
-                                                     if_else(grepl("_CL_", state_param_sum$AU_ID),
+                                                     if_else(grepl("_CL_", state_param_sum_stn$AU_ID),
                                                              "Coastline",
                                                              NA_character_
                                                      )
@@ -129,12 +122,12 @@ state_param_sum_au$AU_Type <- if_else(grepl("_SR_", state_param_sum_au$AU_ID),
                                      )
                              )
 )
-state_param_sum[state_param_sum$AU_ID == "Sru Lake", "AU_Name"] <- "Sru Lake"
-state_param_sum[state_param_sum$AU_ID == "Sru Lake", "AU_Type"] <- "Lake"
+state_param_sum_stn[state_param_sum_stn$AU_ID == "Sru Lake", "AU_Name"] <- "Sru Lake"
+state_param_sum_stn[state_param_sum_stn$AU_ID == "Sru Lake", "AU_Type"] <- "Lake"
 state_param_sum_au[state_param_sum_au$AU_ID == "Sru Lake", "AU_Name"] <- "Sru Lake"
 state_param_sum_au[state_param_sum_au$AU_ID == "Sru Lake", "AU_Type"] <- "Lake"
 
-status_current <- as.symbol(colnames(state_param_sum)[grep("trend", colnames(state_param_sum)) - 1])
+status_current <- as.symbol(colnames(state_param_sum_stn)[grep("trend", colnames(state_param_sum_stn)) - 1])
 
 basin_intro <- FALSE
 
@@ -156,7 +149,7 @@ state_wql_streams$Char_Name <- unlist(sapply(state_wql_streams$POLLUTANT, AWQMS_
 state_wql_streams$Char_Name <- AWQMS_to_standard(state_wql_streams$Char_Name)
 state_wql_streams <- sf::st_zm(state_wql_streams, what = "ZM")
 state_wql_streams <- st_transform(state_wql_streams, 4326)
-state_wql_streams <- filter(state_wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name %in% unique(state_param_sum$Char_Name))
+state_wql_streams <- filter(state_wql_streams[, c("STREAM_NAM", "SEGMENT_ID", "SEASON", "Char_Name", "LISTING_ST", "TMDL_INFO")], Char_Name %in% unique(state_param_sum_stn$Char_Name))
 state_wql_streams_shp <- state_wql_streams %>% group_by(Char_Name) %>% summarise(geometry = st_union(geometry))
 # wql_streams <- wql_streams[lapply(wql_streams$`_ogr_geometry_`, length) != 0,]
 
@@ -333,7 +326,8 @@ knitr::kable(bacteria.indicators.tbl,
 
 A geometric mean is calculated on a rolling basis for each 90-day period of data available at a sampling location. A minimum of five samples collected on different days is required to calculate a 90-day rolling geometric mean. The 90-day geometric mean ($GM90$) of bacteria concentration is calculated using `r tbls(name = "eqns-GM90", display="cite")` by taking the nth root of the product of the concentration of each sample collected within a 90-day period for which $n$ ≥ 5.
 
-`r eqns(name = "eqns-GM90",caption = "Geometric Mean Equaiton."))`
+`r eqns(name = "eqns-GM90", caption = "Geometric Mean Equation.")`
+
 $$GM90 = \sqrt[n]{x_{1}x_{2}...x_{n}}$$  
 
 Where:
@@ -410,7 +404,7 @@ The application of the various dissolved oxygen criteria is based on designated 
 
 If the dissolved oxygen concentration exceeded the water quality criterion, but met the criteria for percent saturation at the same time, it was considered to be attaining the dissolved oxygen criterion. Direct field instrument measurements of percent saturation are preferred and shall be used if available. However, if corresponding percent saturation data is unavailable, and corresponding water temperature data is available, the value can be calculated using `r tbls(name = "eqns-DO-Theo", display="cite")` and `r tbls(name = "eqns-DO-PS", display="cite")`. When the dissolved oxygen saturation is measured in excess of 100 percent, the saturation value used shall be limited to 100 percent for the calculation of metrics. 
 
-`r eqns(name = "eqns-DO-Theo",caption = ""))`
+`r eqns(name = "eqns-DO-Theo",caption = "")`
 $$DO_{Theo} = e ^{[-139.34411+\frac{1.575701\times 10^5}{T}-\frac{6.642308\times 10^7}{T^2}+\frac{1.23800\times 10^{10}}{T^3}-\frac{8.621949\times 10^{11}}{T^4}]} \times (1-(0.0001148 \times Site_{elvm}))$$
 Where:
 
@@ -422,7 +416,7 @@ $T$ = Temperature in Kelvin.
 
 $Site_{elvm}$ = Site elevation in meters (recorded field value or derived from a Digital Elevation Model).
 
-`r eqns(name = "eqns-DO-PS",caption = "Percent Dissolved Oxygen Saturation"))`
+`r eqns(name = "eqns-DO-PS",caption = "Percent Dissolved Oxygen Saturation")`
 
 $$ PS = 100\times \frac{DO_{Meas}}{DO_{Theo}} $$
 Where:
@@ -536,7 +530,7 @@ The applicable temperature criteria in `r tbls(name="tbl.temp.criteria", display
 
 The seven-day average daily maximum stream temperature (`r tbls(name="eqns-temp-7DADM", display="cite")`) is an average of the daily maximum water temperatures for seven consecutive days. The average daily maximum temperature value for each seven-day period is assigned to the last (7th) calendar day of each period. The 7DADM is repeated for each consecutive 7-day period on a moving or rolling basis. For example, the 7DADM for August 10 is calculated from Tmax for August 4 to August 10; the 7DADM for August 11 is calculated from August 5 to 11, etc.
 
-`r eqns(name = "eqns-temp-7DADM", caption = ""))`
+`r eqns(name = "eqns-temp-7DADM", caption = "")`
 
 $$7DADM = \frac{1}{7}\sum_{i=1}^7T_{max-i} $$
 Where:
@@ -760,7 +754,7 @@ To summarize actions taken to restore or protect watersheds and water quality, w
 au_types <- unique(state_param_sum_au$AU_Type)
 n_au_ids <- length(unique(state_param_sum_au$AU_ID))
 n_au_types <- length(unique(state_param_sum_au$AU_Type))
-n_stations <- length(unique(state_param_sum$MLocID))
+n_stations <- length(unique(state_param_sum_stn$MLocID))
 parameters <- odeqstatusandtrends::AWQMS_to_standard(unique(state_param_sum_au$Char_Name))
 n_params <- length(unique(state_param_sum_au$Char_Name))
 list_fun <- function(x){paste(x, collapse = "s', '")}
@@ -805,7 +799,7 @@ if(!file.exists(paste0(state_project_dir, "Oregon_query_stations.png"))){
 cat("### Parameter Summary Maps\n\n")
 # fignum <- 1
 
-for(i in unique(state_param_sum$Char_Name)){
+for(i in unique(state_param_sum_stn$Char_Name)){
   if(i != "pH"){
     parameter_name <- simpleCap(i)
   } else {parameter_name <- "pH"}
@@ -817,7 +811,7 @@ for(i in unique(state_param_sum$Char_Name)){
     wql_streams_i <- filter(state_wql_streams_shp, Char_Name == i)
     # wql_streams_i <- wql_streams_i[lapply(wql_streams_i$`_ogr_geometry_`, length) != 0,]
     
-    map_df <- state_param_sum %>% filter(Char_Name == i) %>% mutate(color = if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
+    map_df <- state_param_sum_stn %>% filter(Char_Name == i) %>% mutate(color = if_else(!!status_current %in% c("Unassessed", "Insufficient Data"),
                                                                                     "lightgray",
                                                                                     if_else(!!status_current == "Not Attaining",
                                                                                             "orange",
@@ -928,7 +922,7 @@ cat("\n\n")
 
 cat(paste0("\n\n", tbls("stn_sum", display = 'cite') ," summarizes the number of attaining, not attaining, and unassessed stations by parameter.\n\n"))
 
-stn_sum <- state_param_sum %>% group_by(Char_Name) %>% 
+stn_sum <- state_param_sum_stn %>% group_by(Char_Name) %>% 
   summarise(Attaining = sum(status_2015_2018 == "Attaining"),
             "Not Attaining" = sum(status_2015_2018 == "Not Attaining"),
             Unassessed = sum(status_2015_2018 == "Unassessed"))%>% 
@@ -965,7 +959,7 @@ cat("### Trend\n\n")
 
 cat(paste0("\n\nA summary of the trends across parameters is shown in ", tbls("stn_trend_sum", display = 'cite'),". Note that trend requires significantly more data than status and may result in many stations with sufficient data for assessing status, but insufficient data for assessing trend.\n\n"))
 
-stn_sum <- state_param_sum %>% group_by(Char_Name) %>% 
+stn_sum <- state_param_sum_stn %>% group_by(Char_Name) %>% 
   summarise(Improving = sum(trend == "Improving"),
             Degrading = sum(trend == "Degrading"),
             Steady = sum(trend == "Steady"),
