--- a/state_subbasin_summary.Rmd
+++ b/state_subbasin_summary.Rmd
@@ -76,7 +76,7 @@ knitr::kable(wql_sub, format = table_format, padding = 0, digits = 1, row.names 
 
 ##### Status
 
-There are `r length(unique(par_sum_au$AU_ID))' assessment units within the `r subbasin_name` subbasin that were included in this report. `r tbls(name = paste0(subbasin_name, "_au_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_au_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed assessment units by parameter.
+There are `r length(unique(par_sum_au$AU_ID))` assessment units within the `r subbasin_name` subbasin that were included in this report. `r tbls(name = paste0(subbasin_name, "_au_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_au_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed assessment units by parameter.
 
 ```{r status-au-table-sum, include = TRUE, results = 'asis'}
 
@@ -94,6 +94,7 @@ knitr::kable(au_sum, padding = 0, digits = 1, row.names = FALSE, format = table_
   table_style()
 
 ```
+
 
 ```{r status-au-plot, include = TRUE, results = 'asis', fig.cap = cap_list, eval.after = 'fig.cap'}
 
@@ -129,7 +130,7 @@ knitr::kable(au_sum_type, padding = 0, digits = 1, row.names = FALSE, format = t
              
 ```
 
-There are `r length(unique(par_sum$MLocID))` stations within the `r subbasin_name' subbasin that were included in this report.  `r tbls(name = paste0(subbasin_name, "_stn_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_stn_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed stations by parameter.
+There are `r length(unique(par_sum$MLocID))` stations within the `r subbasin_name` subbasin that were included in this report.  `r tbls(name = paste0(subbasin_name, "_stn_sum"), display="cite")` and `r figs(name = paste0(subbasin_name, "_stn_sum_plot"), display="cite")` summarizes the number of attaining, not attaining, and unassessed stations by parameter.
 
 ```{r status-stn-table-sum, include = TRUE, results = 'asis'}
 
